Date											Changes
Mar 1, 2016 [3:47pm]			Updated readme and added changelog