@@ -35,7 +35,12 @@ class Application extends CI_Controller {
 	{
 		$this->data['menubar'] = $this->parser->parse('_menubar', $this->config->item('menu_choices'), true);
 		$this->data['content'] = $this->parser->parse($this->data['pagebody'], $this->data, true);
-
+		
+		// convert Caboose output into view parameters
+		$this->['caboose_styles'] = $this->caboose->styles();
+		$this->['caboose_scripts'] = $this->caboose->scripts();
+		$this->['caboose_trailings'] = $this->caboose->trailings();
+		
 		// finally, build the browser page!
 		$this->data['data'] = &$this->data;
 		$this->parser->parse('_template', $this->data);
